--- a/css.css
+++ b/css.css
@@ -1,7 +1,14 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background-image: url(/picC/top.png);
+
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    font-family: Arial, sans-serif;
 }
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -16,4 +23,21 @@ body {
 }
 .certificate:hover {
     opacity: 0.8;
+}
+
+h1 {
+    font-size: 2em;
+    color: #dfc2c2;
+    animation: fadeInZoom 2s ease-in-out;
+}
+
+@keyframes fadeInZoom {
+    0% {
+        opacity: 0;
+        transform: scale(0.8);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
